fixed spillover css from netmeme.css

--- a/netmeme.css
+++ b/netmeme.css
@@ -12,7 +12,7 @@
   position: relative;
 }
 
-p {
+.netmeme p {
   position: absolute; 
   left: 0;
   right: 0; 
